Work on the presentation.

--- a/index.Rmd
+++ b/index.Rmd
@@ -2059,7 +2059,7 @@ p +
   theme_void()
 ```
 
-`r chunk_reveal(chunk_name = "theme1", title = "# Built in themes")`
+`r chunk_reveal(chunk_name = "theme1", title = "# ggplot2 built-in themes")`
 
 ---
 
@@ -2091,18 +2091,22 @@ p +
 
 ---
 
-```{r, legend_position, include = FALSE}
-p +
-  theme(legend.position = "top") +
-  theme(legend.position = "left") +
-  theme(legend.position = "bottom")
+# Modify specific components of a theme
+
+```{r eval = FALSE}
+?theme() # Display all the modifiable components of a theme
 ```
 
-`r chunk_reveal(chunk_name = "legend_position", title = "# Legend position")`
+.small[
+```{r, echo = FALSE, tidy=FALSE, strip.white=FALSE, size="tiny"}
+options(width = 120)
+c("line", "rect", "text", "title", "aspect.ratio", "axis.title", "axis.title.x", "axis.title.x.top", "axis.title.x.bottom", "axis.title.y", "axis.title.y.left", "axis.title.y.right", "axis.text", "axis.text.x", "axis.text.x.top", "axis.text.x.bottom", "axis.text.y", "axis.text.y.left", "axis.text.y.right", "axis.ticks", "axis.ticks.x", "axis.ticks.x.top", "axis.ticks.x.bottom", "axis.ticks.y", "axis.ticks.y.left", "axis.ticks.y.right", "axis.ticks.length", "axis.ticks.length.x", "axis.ticks.length.x.top", "axis.ticks.length.x.bottom", "axis.ticks.length.y", "axis.ticks.length.y.left", "axis.ticks.length.y.right", "axis.line", "axis.line.x", "axis.line.x.top", "axis.line.x.bottom", "axis.line.y", "axis.line.y.left", "axis.line.y.right", "legend.background", "legend.margin", "legend.spacing", "legend.spacing.x", "legend.spacing.y", "legend.key", "legend.key.size", "legend.key.height", "legend.key.width", "legend.text", "legend.text.align", "legend.title", "legend.title.align", "legend.position", "legend.direction", "legend.justification", "legend.box", "legend.box.just", "legend.box.margin", "legend.box.background", "legend.box.spacing", "panel.background", "panel.border", "panel.spacing", "panel.spacing.x", "panel.spacing.y", "panel.grid", "panel.grid.major", "panel.grid.minor", "panel.grid.major.x", "panel.grid.major.y", "panel.grid.minor.x", "panel.grid.minor.y", "panel.ontop", "plot.background", "plot.title", "plot.title.position", "plot.subtitle", "plot.caption", "plot.caption.position", "plot.tag", "plot.tag.position", "plot.margin", "strip.background", "strip.background.x", "strip.background.y", "strip.placement", "strip.text", "strip.text.x", "strip.text.y", "strip.switch.pad.grid", "strip.switch.pad.wrap")
+```
+]
 
 ---
 
-# ggplot2 themes
+# Modify specific components of a theme
 
 - Many components can be modified with the `theme()` function. For example:
 
@@ -2152,6 +2156,17 @@ p +
 ```
 
 `r chunk_reveal(chunk_name = "ticks", title = "# Axes ticks")`
+
+---
+
+```{r, legend_position, include = FALSE}
+p +
+  theme(legend.position = "top") +
+  theme(legend.position = "left") +
+  theme(legend.position = "bottom")
+```
+
+`r chunk_reveal(chunk_name = "legend_position", title = "# Legend position")`
 
 ---
 
