--- a/index.Rmd
+++ b/index.Rmd
@@ -2179,7 +2179,8 @@ p +
 p +
   theme(legend.position = "top") +
   theme(legend.position = "left") +
-  theme(legend.position = "bottom")
+  theme(legend.position = "bottom") +
+  theme(legend.position = c(0.5, 0.5))
 ```
 
 `r chunk_reveal(chunk_name = "legend_position", title = "# Legend position")`
